src/test/ui/static/static-method-privacy.stderr
error[E0624]: method `new` is private
  --> $DIR/static-method-privacy.rs:9:13
   |
LL |     let _ = a::S::new();    //~ ERROR method `new` is private
   |             ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
